--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "企业级电商管理系统",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development npx webpack-dev-server",
+    "build": "NODE_ENV=production npx webpack -p"
   },
   "repository": {
     "type": "git",
@@ -21,12 +23,22 @@
     "babel-loader": "7",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^2.4.1",
     "css-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.10.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "3.10.0"
+    "url-loader": "^1.1.2",
+    "webpack": "3.10.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
