--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "antd": "^3.15.0",
     "font-awesome": "^4.7.0",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-router": "3.2.1"
   }
 }
